--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.80.0",
     "@react-three/fiber": "^8.13.6",
+    "flowbite": "^2.4.1",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^9.1.7",
     "maath": "^0.5.3",
     "react": "^18.2.0",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.14.2",
     "react-tilt": "^1.0.2",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.27.1",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.149.0"
   },
